--- a/res/layout/home_screen.xml
+++ b/res/layout/home_screen.xml
@@ -15,12 +15,14 @@
         android:id="@+id/btn_backup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sync_to_cloud"/>
+        android:text="@string/sync_to_cloud"
+        android:visibility="gone"/>
         
     <Button
         android:id="@+id/btn_sync"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sync_storage"/>
+        android:text="@string/sync_storage"
+        android:visibility="gone"/>
     
 </LinearLayout> 
