--- a/res/layout/upload_screen.xml
+++ b/res/layout/upload_screen.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btn_sync_to_cloud"
-        android:text="@string/sync_storage"/>
+        android:text="@string/sync_to_cloud"/>
     
     <CheckBox 
         android:layout_width="wrap_content"
