--- a/res/layout/home_screen.xml
+++ b/res/layout/home_screen.xml
@@ -16,13 +16,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sync_to_cloud"
-        android:visibility="gone"/>
+        android:layout_marginTop="@dimen/button_margin_top"/>
         
     <Button
         android:id="@+id/btn_sync"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sync_storage"
-        android:visibility="gone"/>
+        android:layout_marginTop="@dimen/button_margin_top"/>
     
 </LinearLayout> 
